2008-04-23  Chris Buccella <buccella@linux.vnet.ibm.com>

	* backend/cimxml/client.c:
	Fixed 1940546: Memory corruption in AsciiToXmlStr()
	(patch by Shashi Uli)

2008-04-22 Gary Readler <gdr@us.ibm.com>
	* README TEST/Makefile.am TEST/v2test_ec.c TEST/v2test_ecn.c
	TEST/v2test_ei.c TEST/v2test_ein.c TEST/v2test_gc.c
	updated README and added some v2 interface testcases  

2008-02-05  Sven Schuetz <sven@de.ibm.com>

	* configure.ac, Makefile.am, backend/cimxml/cimXmlResp.y:
	Fixed 1887125: cleanup due to new parser

2008-01-16  Sven Schuetz <sven@de.ibm.com>

	* configure.ac, Makefile.am, backend/cimxml/grammar.c,
	backend/cimxml/client.c, backend/cimxml/cimXmlParser.c,
	backend/cimxml/nativeCimXml.h, backend/cimxml/indicationlistener.c:
	Implemented 1828588: Indication support (CIMXML)

2008-01-09  Sven Schuetz <sven@de.ibm.com>

	* backend/cimxml/parserUtil.c, backend/cimxml/cimXmlParser.c,
	backend/cimxml/value.c, backend/cimxml/cimXmlParser.h,
	backend/cimxml/grammar.c, backend/cimxml/grammar.h:
	Implemented 1867649: embedded instance support

2008-01-09  Sven Schuetz <sven@de.ibm.com>

	* backend/cimxml/cimXmlResp.y, backend/cimxml/cimXmlParser.h,
	backend/cimxml/client.c, backend/cimxml/value.c,
	backend/cimxml/cimXmlParser.c, Makefile.am, backend/cimxml/grammar.h,
	backend/cimxml/parserUtil.h, backend/cimxml/parserUtil.c, 
	backend/cimxml/grammar.c:
	Implemented 1854813: new parser

2008-01-02  Sven Schuetz <sven@de.ibm.com>

	* backend/cimxml/cimXmlResp.y:
	Fixed 1793132: sfcc reports incorrect namespace for associators operation

2007-10-31  Sven Schuetz <sven@de.ibm.com>

	* cimc/cimcdt.h, cimc/cimcft.h, cimc/cimc.h:
	Implemented 1820015: prepare for indication support

2007-10-12  Sven Schuetz <sven@de.ibm.com>

	* backend/cimxml/client.c:
	Fixed 1810017: sfcc generates incorrect XML for complex properties

2007-09-27  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* TEST/test.c:
	invokeMethod test now works correctly
