@@ -19,12 +19,13 @@
   http://www.opensource.org/licenses/eclipse-1.0.php
 
   \author Frank Scheffler
-  $Revision: 1.2 $
+  $Revision: 1.3 $
 
   \todo Once CMGetCharPtr() macro uses the appropriate function call instead
   of casting the internal hdl, store "CMPIString" type in there.
 */
 
+#include <stdlib.h>
 #include <string.h>
 #include "cmcidt.h"
 #include "cmcift.h"
